# Dreamcodec

./: .gitignore  CHANGELOG.md  README.md  build-exe.bat  build-setup.bat  dev.bat  index.html  package-lock.json  package.json  rebuild-and-test.bat  run-and-log.bat  run-dev-debug.bat
src/: App.tsx  index.css
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  lib.rs  logger.rs  main.rs
src-tauri/src/ffmpeg/: mod.rs
src-tauri/src/gpu/: mod.rs
src/components/: ConversionProgress.tsx  FileQueue.tsx  GpuInfo.tsx  LogOutput.tsx  Settings.tsx  StarBackground.tsx
src/types/: index.ts
