[package]
name = "dreamcodec"
version = "2.2.1"
description = "GPU-accelerated video converter built with Tauri"
authors = ["Thornvald"]
edition = "2021"

[lib]
name = "video_converter_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-store = "2"
tauri-plugin-http = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
regex = "1"
reqwest = { version = "0.12", features = ["stream"] }
zip = "2"
tokio-util = { version = "0.7", features = ["io"] }
dirs = "5"
futures = "0.3"

[dependencies.uuid]
version = "1"
features = ["v4"]
